--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,28 @@ body {
   background-color: var(--primary-light-bg);
   color: var(--primary-dark-text);
 }
+
+h1,
+h2,
+h2,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.container {
+  width: 1200;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*header*/
+
+.header-container {
+  display: flex;
+}
 /* header logo */
 .logo {
   font-family: var(--secondary-font);
@@ -35,6 +57,9 @@ body {
 /* header site-nav*/
 .site-nav {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .site-nav-link {
@@ -52,6 +77,9 @@ body {
 /* header auth-nav */
 .auth-nav {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .auth-nav-link {
@@ -85,8 +113,12 @@ body {
   color: var(--primary-light-bg);
 }
 /* main-specifics */
+
 .specifics-list {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .specifics-title {
   font-weight: 700;
@@ -105,6 +137,9 @@ body {
 /* main-work */
 .work-list {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .work-title {
   font-weight: 700;
@@ -119,6 +154,9 @@ body {
 }
 .team-list {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .team-title {
   font-weight: 700;
@@ -159,6 +197,9 @@ body {
 .footer-contacts {
   list-style-type: none;
   font-style: normal;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .footer-map {
   font-size: 14px;
@@ -191,6 +232,9 @@ body {
 }
 .button-list {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .pointer {
   font-family: inherit;
@@ -206,6 +250,9 @@ body {
 }
 .portfolio-list {
   list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 .portfolio-tatle {
   font-weight: 700;
