--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@
   --secondary-blue-text: #2196f3;
 }
 body {
+  width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
@@ -29,20 +32,32 @@ p {
 }
 
 .container {
-  width: 1200;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
-/*header*/
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
-.header-container {
+.header {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.header-box {
   display: flex;
+  align-items: center;
 }
 /* header logo */
 .logo {
+  margin-right: 93px;
+  margin-left: 215px;
+
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
@@ -55,11 +70,23 @@ p {
   color: var(--primary-dark-text);
 }
 /* header site-nav*/
+
 .site-nav {
+  display: flex;
+  align-items: center;
+
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.nav-item {
+  margin-right: 50px;
+}
+
+.nav-item:last-child {
+  margin: 0;
 }
 
 .site-nav-link {
@@ -75,7 +102,15 @@ p {
   color: var(--secondary-blue-text);
 }
 /* header auth-nav */
+.auth-box {
+  margin-left: auto;
+  margin-right: 215px;
+}
+
 .auth-nav {
+  display: flex;
+  align-items: center;
+
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
@@ -83,6 +118,8 @@ p {
 }
 
 .auth-nav-link {
+  margin-right: 50px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -95,10 +132,20 @@ p {
   color: var(--secondary-blue-text);
 }
 /* main-hero */
+.hero-box {
+}
+
 .hero {
+  height: 600px;
   background-color: var(--secondary-dark-bg);
 }
 .hero-title {
+  text-align: center;
+  padding-left: 452px;
+  padding-right: 452px;
+  padding-top: 200px;
+  margin-bottom: 30px;
+
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -107,6 +154,13 @@ p {
   color: var(--primary-light-bg);
 }
 .hero-button {
+  display: block;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 32px;
+  margin-top: 30px;
+
   background-color: var(--secondary-blue-text);
 }
 .hero-btn {
@@ -114,7 +168,20 @@ p {
 }
 /* main-specifics */
 
+.specifics-item {
+  margin-left: 30px;
+  margin-top: 10px;
+}
+.specifics-item:last-child {
+  margin: 0;
+}
+
 .specifics-list {
+  display: flex;
+  align-items: center;
+  margin-left: 215px;
+  margin-right: 215px;
+
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
@@ -135,12 +202,22 @@ p {
   color: var(--secondary-dark-text);
 }
 /* main-work */
+
 .work-list {
+  display: flex;
+  align-items: center;
+
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
+
+.work-item {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .work-title {
   font-weight: 700;
   font-size: 36px;
@@ -152,7 +229,16 @@ p {
 .team {
   background-color: var(--secondary-light-bg);
 }
+
+.team-item {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .team-list {
+  display: flex;
+  align-items: center;
+
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
@@ -180,6 +266,8 @@ p {
 }
 /* footer */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--secondary-dark-bg);
 }
 .footer-logo {
