--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,10 @@ p {
 }
 
 .work-title {
+  display: block;
+  text-align: center;
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -231,8 +235,9 @@ p {
 }
 
 .team-item {
-  margin-right: auto;
-  margin-left: auto;
+  display: block;
+  text-align: center;
+  margin-bottom: 50px;
 }
 
 .team-list {
