--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,7 @@ p {
 }
 .button-list {
   display: flex;
-  align-items: center;
+  justify-content: center;
 
   list-style-type: none;
   padding-left: 0;
@@ -332,9 +332,10 @@ p {
 }
 
 .btn-item {
+  margin-bottom: 50px;
+  margin-top: 16px;
   display: block;
   margin-right: 8px;
-  margin-bottom: 50px;
   align-items: center;
 }
 .btn-item:last-child {
@@ -342,6 +343,14 @@ p {
 }
 
 .pointer {
+  border: none;
+  padding: 6px 22px;
+  border-radius: 4px;
+  max-width: 150px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
   font-family: inherit;
   cursor: pointer;
   background-color: var(--secondary-light-bg);
@@ -357,12 +366,24 @@ p {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  margin: calc(-1 * 15px);
 
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
+
+.portfolio-item {
+  margin: 15px;
+}
+
+.portfolio-box {
+  padding: 20px 24px;
+  border: 1px solid #eeeeee;
+  border-top: 0;
+}
+
 .portfolio-tatle {
   font-weight: 700;
   font-size: 18px;
