--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,9 @@ p {
 }
 
 .team-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -255,6 +258,7 @@ p {
   color: var(--primary-dark-text);
 }
 .team-subtitle {
+  text-align: center;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -262,6 +266,9 @@ p {
   color: var(--primary-dark-text);
 }
 .team-text {
+  margin-top: 10px;
+  margin-bottom: 30px;
+  text-align: center;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
