--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,6 @@
   --secondary-blue-text: #2196f3;
 }
 body {
-  width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
@@ -25,10 +22,15 @@ body {
 
 h1,
 h2,
-h2,
+h3,
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
@@ -45,6 +47,7 @@ p {
 }
 
 .header {
+  border-bottom: 1px;
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -101,13 +104,11 @@ p {
   color: var(--secondary-blue-text);
 }
 /* header auth-nav */
-.auth-box {
-  margin-left: auto;
-}
 
 .auth-nav {
   display: flex;
   align-items: center;
+  margin-left: auto;
 
   list-style-type: none;
   padding-left: 0;
@@ -115,9 +116,15 @@ p {
   margin-bottom: 0;
 }
 
-.auth-nav-link {
+.auth-item {
   margin-right: 50px;
+}
 
+.auth-item:last-child {
+  margin: 0;
+}
+
+.auth-nav-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -131,15 +138,16 @@ p {
 }
 /* main-hero */
 .hero {
-  height: 600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--secondary-dark-bg);
 }
 .hero-title {
   text-align: center;
-  padding-left: 252px;
-  padding-right: 252px;
-  padding-top: 200px;
   margin-bottom: 30px;
+  width: 696px;
+  margin-left: auto;
+  margin-right: auto;
 
   font-weight: 900;
   font-size: 44px;
@@ -165,9 +173,8 @@ p {
 
 .specifics-item {
   margin-left: 30px;
-  margin-top: 10px;
 }
-.specifics-item:last-child {
+.specifics-item:first-child {
   margin: 0;
 }
 
@@ -190,6 +197,7 @@ p {
 }
 .specifics-text {
   text-align: left;
+  width: 270px;
 
   font-size: 14px;
   line-height: 1.71;
@@ -197,6 +205,9 @@ p {
   color: var(--secondary-dark-text);
 }
 /* main-work */
+.work {
+  padding-top: 0px;
+}
 
 .work-list {
   display: flex;
@@ -209,8 +220,10 @@ p {
 }
 
 .work-item {
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 30px;
+}
+.work-item:last-child {
+  margin: 0;
 }
 
 .work-title {
@@ -230,11 +243,16 @@ p {
 }
 
 .team-item {
+  margin-right: 30px;
+
+  background-color: var(--primary-light-bg);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  margin-right: auto;
-  margin-left: auto;
+}
+
+.team-item:last-child {
+  margin: 0;
 }
 
 .team-list {
@@ -267,13 +285,18 @@ p {
 }
 .team-text {
   margin-top: 10px;
-  margin-bottom: 30px;
   text-align: center;
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--secondary-dark-text);
 }
+
+.team-page {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 /* footer */
 .footer {
   padding-top: 60px;
@@ -296,9 +319,17 @@ p {
   list-style-type: none;
   font-style: normal;
   padding-left: 0;
-  margin-top: 0;
+  margin-top: 20px;
   margin-bottom: 0;
 }
+
+.footer-item {
+  margin-top: 9px;
+}
+.footer-item:first-child {
+  margin: 0;
+}
+
 .footer-map {
   font-size: 14px;
   line-height: 1.71;
@@ -335,18 +366,16 @@ p {
   list-style-type: none;
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 50px;
 }
 
 .btn-item {
-  margin-bottom: 50px;
-  margin-top: 16px;
   display: block;
   margin-right: 8px;
   align-items: center;
 }
 .btn-item:last-child {
-  margin-left: 0;
+  margin: 0;
 }
 
 .pointer {
@@ -377,8 +406,6 @@ p {
 
   list-style-type: none;
   padding-left: 0;
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .portfolio-item {
@@ -399,6 +426,7 @@ p {
   color: #212121;
 }
 .portfolio-text {
+  margin-top: 4px;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
